--- a/packages/shared/src/index.css
+++ b/packages/shared/src/index.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 @layer utilities {
-
   /* Apply thin scrollbar globally */
   * {
     @apply scrollbar-thin;
@@ -22,135 +21,148 @@ body,
 
 /* Regular & Italic Styles */
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/Inter-Regular.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/Inter-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/Inter-Italic.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/Inter-Italic.woff") format("woff");
   font-weight: 400;
   font-style: italic;
 }
 
 /* Thin */
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/Inter-Thin.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/Inter-Thin.woff") format("woff");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/Inter-ThinItalic.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/Inter-ThinItalic.woff")
+    format("woff");
   font-weight: 100;
   font-style: italic;
 }
 
 /* Extra Light */
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/Inter-ExtraLight.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/Inter-ExtraLight.woff")
+    format("woff");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/Inter-ExtraLightItalic.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/Inter-ExtraLightItalic.woff")
+    format("woff");
   font-weight: 200;
   font-style: italic;
 }
 
 /* Light */
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/Inter-Light.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/Inter-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/Inter-LightItalic.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/Inter-LightItalic.woff")
+    format("woff");
   font-weight: 300;
   font-style: italic;
 }
 
 /* Medium */
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/Inter-Medium.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/Inter-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/Inter-MediumItalic.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/Inter-MediumItalic.woff")
+    format("woff");
   font-weight: 500;
   font-style: italic;
 }
 
 /* SemiBold */
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/PublicSans-SemiBold.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/PublicSans-SemiBold.woff")
+    format("woff");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/PublicSans-SemiBoldItalic.woff') format('woff');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/PublicSans-SemiBoldItalic.woff")
+    format("woff");
   font-weight: 600;
   font-style: italic;
 }
 
 /* Bold */
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/PublicSans-Bold.ttf') format('truetype');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/PublicSans-Bold.ttf")
+    format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/PublicSans-BoldItalic.ttf') format('truetype');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/PublicSans-BoldItalic.ttf")
+    format("truetype");
   font-weight: 700;
   font-style: italic;
 }
 
 /* Extra Bold */
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/PublicSans-ExtraBold.ttf') format('truetype');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/PublicSans-ExtraBold.ttf")
+    format("truetype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/PublicSans-ExtraBoldItalic.ttf') format('truetype');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/PublicSans-ExtraBoldItalic.ttf")
+    format("truetype");
   font-weight: 800;
   font-style: italic;
 }
 
 /* Black */
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/PublicSans-Black.ttf') format('truetype');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/PublicSans-Black.ttf")
+    format("truetype");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Public Sans';
-  src: url('./assets/css/Public_Sans/static/PublicSans-BlackItalic.ttf') format('truetype');
+  font-family: "Public Sans";
+  src: url("./assets/css/Public_Sans/static/PublicSans-BlackItalic.ttf")
+    format("truetype");
   font-weight: 900;
   font-style: italic;
 }
@@ -177,8 +189,8 @@ body,
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 248 52.6% 55.3%;
+    --primary-foreground: 0 0% 100%;
 
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -230,98 +242,50 @@ body,
     --table-header-text-color: 0, 0%, 50%, 1;
     --divider-color: 0, 0%, 75%, 1;
     /* hsla(0, 0%, 75%, 1) */
-    --gray-color: 0, 0%, 41%, 1
-      /* hsla(0, 0%, 41%, 1) */
-    ;
-    --gray-light: 212, 7%, 44%, 1
-      /* hsla(212, 7%, 44%, 1) */
-    ;
+    --gray-color: 0, 0%, 41%, 1 /* hsla(0, 0%, 41%, 1) */;
+    --gray-light: 212, 7%, 44%, 1 /* hsla(212, 7%, 44%, 1) */;
     --highlight: 245, 57%, 54%, 1;
     /* navbar border highlight background: var(--Brand-Stroke-Compound-Rest, hsla(208, 85%, 40%, 1)); */
     --navbar-border-highlight: 208, 85%, 40%, 1;
     /* hsla(245, 57%, 54%, 1) */
     --highlight-light-goldenrod-yellow:
-      38, 65%, 76%, 1
-      /* hsla(38, 65%, 76%, 1) */
-    ;
-    --highlight-light-lime: 102, 65%, 76%, 1
-      /* hsla(102, 65%, 76%, 1) */
-    ;
+      38, 65%, 76%, 1 /* hsla(38, 65%, 76%, 1) */;
+    --highlight-light-lime: 102, 65%, 76%, 1 /* hsla(102, 65%, 76%, 1) */;
     --highlight-minty-sky: 176, 65%, 76%, 1;
     /* hsla(176, 65%, 76%, 1) */
-    --gray-light-green: 120, 2%, 78%, 1
-      /* hsla(120, 2%, 78%, 1) */
-    ;
+    --gray-light-green: 120, 2%, 78%, 1 /* hsla(120, 2%, 78%, 1) */;
     --black-dark: 0, 0%, 0%, 1;
     /* hsla(0, 0%, 0%, 1) */
     --highligh-soft-cream-yellow: 41, 57%, 89%, 1;
     /* hsla(41, 57%, 89%, 1) */
     --highlight-soft-wheat-yellow: 42, 35%, 79%, 1;
     /* hsla(42, 35%, 79%, 1) */
-    --highlight-light-gray: 0, 0%, 95%, 1
-      /* hsla(0, 0%, 95%, 1) */
-    ;
-    --highlight-light-cream: 42, 5%, 87%, 1
-      /* hsla(42, 5%, 87%, 1) */
-    ;
+    --highlight-light-gray: 0, 0%, 95%, 1 /* hsla(0, 0%, 95%, 1) */;
+    --highlight-light-cream: 42, 5%, 87%, 1 /* hsla(42, 5%, 87%, 1) */;
 
-    --gray-light-white: 165, 10%, 69%, 1
-      /* hsla(165, 10%, 69%, 1) */
-    ;
+    --gray-light-white: 165, 10%, 69%, 1 /* hsla(165, 10%, 69%, 1) */;
     /* due red background: hsla(4, 90%, 58%, 1);
  */
     --due-red: 4, 90%, 58%, 1;
-    --highlight-red: 360, 59%, 48%, 1
-      /*hsla(360, 59%, 48%, 1) */
-    ;
-    --highlight-yellow: 41, 90%, 56%, 1
-      /*hsla(41, 90%, 56%, 1) */
-    ;
-    --highlight-green: 108, 52%, 47%, 1
-      /*hsla(108, 52%, 47%, 1) */
-    ;
+    --highlight-red: 360, 59%, 48%, 1 /*hsla(360, 59%, 48%, 1) */;
+    --highlight-yellow: 41, 90%, 56%, 1 /*hsla(41, 90%, 56%, 1) */;
+    --highlight-green: 108, 52%, 47%, 1 /*hsla(108, 52%, 47%, 1) */;
     --highlight-orange: 41, 96%, 89%, 1;
     /*hsla(41, 96%, 89%, 1) */
-    --highlight-soft-purple: 247, 43%, 96%, 1
-      /*hsla(247, 43%, 96%, 1) */
-    ;
-    --highlight-pink-red: 0, 48%, 83%, 1
-      /* hsla(0, 48%, 83%, 1) */
-    ;
-    --dark-cement-color: 211, 11%, 43%, 1
-      /* hsla(211, 11%, 43%, 1) */
-    ;
-    --divider-white-color: 0, 0%, 87%, 1
-      /* hsla(0, 0%, 87%, 1) */
-    ;
-    --dark-red: 0, 60%, 41%, 1
-      /* hsla(0, 60%, 41%, 1) */
-    ;
-    --highlight-green-light: 109, 46%, 91%, 1
-      /* hsla(109, 46%, 91%, 1) */
-    ;
-    --highlight-light-yellow: 42, 100%, 95%, 1
-      /* hsla(42, 100%, 95%, 1) */
-    ;
-    --text-gray-color: 210, 4%, 32%, 1
-      /* hsla(210, 4%, 32%, 1) */
-    ;
-    --red-light: 0, 74%, 93%, 1
-      /* hsla(0, 74%, 93%, 1) */
-    ;
-    --red-light-border: 0, 35%, 72%, 1
-      /* hsla(0, 35%, 72%, 1) */
-    ;
-    --background-yellow-light: 41, 100%, 87%, 1
-      /* hsla(41, 100%, 87%, 1) */
-    ;
-    --border-yellow-medium: 41, 84%, 75%, 1
-      /* hsla(41, 84%, 75%, 1) */
-    ;
+    --highlight-soft-purple: 247, 43%, 96%, 1 /*hsla(247, 43%, 96%, 1) */;
+    --highlight-pink-red: 0, 48%, 83%, 1 /* hsla(0, 48%, 83%, 1) */;
+    --dark-cement-color: 211, 11%, 43%, 1 /* hsla(211, 11%, 43%, 1) */;
+    --divider-white-color: 0, 0%, 87%, 1 /* hsla(0, 0%, 87%, 1) */;
+    --dark-red: 0, 60%, 41%, 1 /* hsla(0, 60%, 41%, 1) */;
+    --highlight-green-light: 109, 46%, 91%, 1 /* hsla(109, 46%, 91%, 1) */;
+    --highlight-light-yellow: 42, 100%, 95%, 1 /* hsla(42, 100%, 95%, 1) */;
+    --text-gray-color: 210, 4%, 32%, 1 /* hsla(210, 4%, 32%, 1) */;
+    --red-light: 0, 74%, 93%, 1 /* hsla(0, 74%, 93%, 1) */;
+    --red-light-border: 0, 35%, 72%, 1 /* hsla(0, 35%, 72%, 1) */;
+    --background-yellow-light: 41, 100%, 87%, 1 /* hsla(41, 100%, 87%, 1) */;
+    --border-yellow-medium: 41, 84%, 75%, 1 /* hsla(41, 84%, 75%, 1) */;
     --background-light-lime-green:
-      108, 64%, 88%, 1
-      /* hsla(108, 64%, 88%, 1) */
-    ;
+      108, 64%, 88%, 1 /* hsla(108, 64%, 88%, 1) */;
   }
 
   .dark {
@@ -345,8 +309,8 @@ body,
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: 248 52.6% 55.3%;
+    --primary-foreground: 0 0% 100%;
 
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
@@ -386,93 +350,45 @@ body,
     --table-header-text-color: 0, 0%, 50%, 1;
     --divider-color: 0, 0%, 100%, 1;
     /* hsla(0, 0%, 100%, 1) */
-    --gray-color: 0, 0%, 41%, 1
-      /* hsla(0, 0%, 41%, 1) */
-    ;
-    --gray-light: 212, 7%, 44%, 1
-      /* hsla(212, 7%, 44%, 1) */
-    ;
+    --gray-color: 0, 0%, 41%, 1 /* hsla(0, 0%, 41%, 1) */;
+    --gray-light: 212, 7%, 44%, 1 /* hsla(212, 7%, 44%, 1) */;
     --highlight: 245, 57%, 54%, 1;
     /* hsla(245, 57%, 54%, 1) */
     --highlight-light-goldenrod-yellow:
-      38, 65%, 76%, 1
-      /* hsla(38, 65%, 76%, 1) */
-    ;
-    --highlight-light-lime: 102, 65%, 76%, 1
-      /* hsla(102, 65%, 76%, 1) */
-    ;
+      38, 65%, 76%, 1 /* hsla(38, 65%, 76%, 1) */;
+    --highlight-light-lime: 102, 65%, 76%, 1 /* hsla(102, 65%, 76%, 1) */;
     --highlight-minty-sky: 176, 65%, 76%, 1;
     /* hsla(176, 65%, 76%, 1) */
-    --gray-light-green: 120, 2%, 78%, 1
-      /* hsla(120, 2%, 78%, 1) */
-    ;
+    --gray-light-green: 120, 2%, 78%, 1 /* hsla(120, 2%, 78%, 1) */;
     --black-dark: 0, 0%, 0%, 1;
     /* hsla(0, 0%, 0%, 1) */
     --highligh-soft-cream-yellow: 41, 57%, 89%, 1;
     /* hsla(41, 57%, 89%, 1) */
     --highlight-soft-wheat-yellow: 42, 35%, 79%, 1;
     /* hsla(42, 35%, 79%, 1) */
-    --highlight-light-gray: 0, 0%, 95%, 1
-      /* hsla(0, 0%, 95%, 1) */
-    ;
-    --highlight-light-cream: 42, 5%, 87%, 1
-      /* hsla(42, 5%, 87%, 1) */
-    ;
+    --highlight-light-gray: 0, 0%, 95%, 1 /* hsla(0, 0%, 95%, 1) */;
+    --highlight-light-cream: 42, 5%, 87%, 1 /* hsla(42, 5%, 87%, 1) */;
 
-    --gray-light-white: 165, 10%, 69%, 1
-      /* hsla(165, 10%, 69%, 1) */
-    ;
-    --highlight-red: 360, 59%, 48%, 1
-      /*hsla(360, 59%, 48%, 1) */
-    ;
-    --highlight-yellow: 41, 90%, 56%, 1
-      /*hsla(41, 90%, 56%, 1) */
-    ;
-    --highlight-green: 108, 52%, 47%, 1
-      /*hsla(108, 52%, 47%, 1) */
-    ;
+    --gray-light-white: 165, 10%, 69%, 1 /* hsla(165, 10%, 69%, 1) */;
+    --highlight-red: 360, 59%, 48%, 1 /*hsla(360, 59%, 48%, 1) */;
+    --highlight-yellow: 41, 90%, 56%, 1 /*hsla(41, 90%, 56%, 1) */;
+    --highlight-green: 108, 52%, 47%, 1 /*hsla(108, 52%, 47%, 1) */;
     --highlight-orange: 41, 96%, 89%, 1;
     /*hsla(41, 96%, 89%, 1) */
-    --highlight-soft-purple: 247, 43%, 96%, 1
-      /*hsla(247, 43%, 96%, 1) */
-    ;
-    --highlight-pink-red: 0, 48%, 83%, 1
-      /* hsla(0, 48%, 83%, 1) */
-    ;
-    --dark-cement-color: 211, 11%, 43%, 1
-      /* hsla(211, 11%, 43%, 1) */
-    ;
-    --divider-white-color: 0, 0%, 87%, 1
-      /* hsla(0, 0%, 87%, 1) */
-    ;
-    --dark-red: 0, 60%, 41%, 1
-      /* hsla(0, 60%, 41%, 1) */
-    ;
-    --highlight-green-light: 109, 46%, 91%, 1
-      /* hsla(109, 46%, 91%, 1) */
-    ;
-    --highlight-light-yellow: 42, 100%, 95%, 1
-      /* hsla(42, 100%, 95%, 1) */
-    ;
-    --text-gray-color: 210, 4%, 32%, 1
-      /* hsla(210, 4%, 32%, 1) */
-    ;
-    --red-light: 0, 74%, 93%, 1
-      /* hsla(0, 74%, 93%, 1) */
-    ;
-    --red-light-border: 0, 35%, 72%, 1
-      /* hsla(0, 35%, 72%, 1) */
-    ;
-    --background-yellow-light: 41, 100%, 87%, 1
-      /* hsla(41, 100%, 87%, 1) */
-    ;
-    --border-yellow-medium: 41, 84%, 75%, 1
-      /* hsla(41, 84%, 75%, 1) */
-    ;
+    --highlight-soft-purple: 247, 43%, 96%, 1 /*hsla(247, 43%, 96%, 1) */;
+    --highlight-pink-red: 0, 48%, 83%, 1 /* hsla(0, 48%, 83%, 1) */;
+    --dark-cement-color: 211, 11%, 43%, 1 /* hsla(211, 11%, 43%, 1) */;
+    --divider-white-color: 0, 0%, 87%, 1 /* hsla(0, 0%, 87%, 1) */;
+    --dark-red: 0, 60%, 41%, 1 /* hsla(0, 60%, 41%, 1) */;
+    --highlight-green-light: 109, 46%, 91%, 1 /* hsla(109, 46%, 91%, 1) */;
+    --highlight-light-yellow: 42, 100%, 95%, 1 /* hsla(42, 100%, 95%, 1) */;
+    --text-gray-color: 210, 4%, 32%, 1 /* hsla(210, 4%, 32%, 1) */;
+    --red-light: 0, 74%, 93%, 1 /* hsla(0, 74%, 93%, 1) */;
+    --red-light-border: 0, 35%, 72%, 1 /* hsla(0, 35%, 72%, 1) */;
+    --background-yellow-light: 41, 100%, 87%, 1 /* hsla(41, 100%, 87%, 1) */;
+    --border-yellow-medium: 41, 84%, 75%, 1 /* hsla(41, 84%, 75%, 1) */;
     --background-light-lime-green:
-      108, 64%, 88%, 1
-      /* hsla(108, 64%, 88%, 1) */
-    ;
+      108, 64%, 88%, 1 /* hsla(108, 64%, 88%, 1) */;
   }
 }
 
