--- a/apps/invox/src/index.css
+++ b/apps/invox/src/index.css
@@ -14,3 +14,13 @@
     color: #fff !important;
     border-radius: unset !important;
 }
+
+/* spotlight.css */
+.spotlight {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  pointer-events: none;
+  transition: clip-path 0.3s ease;
+}
